# muffin-babel

./: .bumpversion.cfg  .coveragerc  .git-commits.yaml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  Changelog  MANIFEST.in  Makefile  README.md  README.rst  muffin_babel.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tests.py
.github/workflows/: release.yml  tests.yml
example/: __init__.py
example/locales/en/LC_MESSAGES/: babel.mo  babel.po
example/locales/ru/LC_MESSAGES/: babel.mo  messages.po
example/templates/: base.html
muffin_babel/: __init__.py
requirements/: requirements-tests.txt  requirements.txt
