[project]
name = "muffin-babel"
version = "1.3.3"
description = "Localization support for the Muffin Framework"
readme = "README.rst"
requires-python = ">=3.8"
license = {"text" = "MIT License"}
authors = [{ name = "Kirill Klenov", email = "horneds@gmail.com" }]
keywords = ["localization", "internationalization", "muffin", "babel", "asyncio", "trio", "asgi"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Framework :: AsyncIO",
  "Framework :: Trio",
]
dependencies = [
  "asgi-babel >= 0.8.9",
  "muffin >= 0.92",
]

[project.urls]
homepage = "https://github.com/klen/muffin-babel"
repository = "https://github.com/klen/muffin-babel"
changelog = "https://raw.githubusercontent.com/klen/muffin-babel/master/Changelog"

[project.optional-dependencies]
tests = [
  "muffin-jinja2 >= 1.7.0",
  "pytest",
  "pytest-aio[curio,trio]",
  "pytest-mypy",
  "ruff",
]
dev = ["pre-commit", "refurb", "bump2version"]
example = ["uvicorn", "muffin-jinja2"]

[tool.setuptools]
packages = ['muffin_babel']

[tool.setuptools.package-data]
muffin_babel = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-xsv"
log_cli = true

[tool.mypy]
packages = ["muffin_babel"]
install_types = true
non_interactive = true
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38,py39,py310,py311,pypy39

[testenv]
deps = -e .[tests]
commands =
	pytest --mypy tests.py

[testenv:pypy39]
deps = -e .[tests]
commands =
	pytest tests.py
"""

[tool.ruff]
fix = true
line-length = 100
target-version = "py38"
exclude = [".venv", "docs", "examples"]
select = ["ALL"]
ignore = ["D", "UP", "ANN", "DJ", "EM", "RSE", "SLF", "RET", "S101", "PLR2004", "PLR0912", "N804", "A003", "TRY003"]
