[bumpversion]
commit = True
current_version = 0.7.6
files = muffin_babel/__init__.py
tag = True
tag_name = {new_version}

[wheel]
python-tag = py3

[metadata]
name = muffin-babel
version = attr: muffin_babel.__version__
url = https://github.com/klen/muffin-babel
description = Localization support for the Muffin Framework
long_description = file: README.rst
author = Kirill Klenov
author_email = horneds@gmail.com
license = MIT
license_files = LICENSE
keywords = localization, internationalization, muffin, babel, asyncio, trio, asgi
project_urls = 
	Documentation = https://github.com/klen/muffin-babel
	Source code = https://github.com/klen/muffin-babel
	Issue tracker = https://github.com/klen/muffin-babel/issues
classifiers = 
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Framework :: AsyncIO
	Framework :: Trio

[options]
packages = muffin_babel
include_package_data = True
python_requires = >= 3.7
install_requires = 
	muffin      >=      0.46
	asgi_babel  >=      0.2

[options.extras_require]
tests = 
	muffin_jinja2 >=    0.7.1
	pytest
	pytest-aio[curio,trio]
	pytest-mypy
build = 
	bump2version
	twine
	wheel
example = 
	uvicorn
	muffin_jinja2

[pylama]
ignore = D203,D213

[pylama:setup.py]
ignore = D

[pylama:tests.py]
ignore = D,W

[tool:pytest]
addopts = -sxv --mypy

[mypy]

[mypy-babel.*]
ignore_missing_imports = True

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps = -e .[tests]
commands = 
	pytest tests.py
